...
    <string name="how_many_in_household">Not including yourself, how many people usually live in your household?</string>
    <string name="how_many_adult_male">Number adult (≥18 years) males:</string>
    <string name="how_many_adult_female">Number adult (≥18 years) females:</string>
    <string name="how_many_childer">Number of children:</string>
    <string name="setup_household">Setup Household</string>
    <string name="exportdata">Export Data</string>
    <string name="add_text_description_dialog_title" translatable="false">Add Text Description</string>
    <string name="toast_food_item_description" translatable="false">Food Item Description:</string>
    <string name="empty_text" translatable="false">Empty input not allowed. Please enter a description.</string>
    <string name="error_participant_id_already_exists">Participant ID already Exists</string>
    <string name="title_notification_reminder">Reminder!</string>
    <string name="notification_reminder_text">Remember to record your food intake today.</string>
    <string name="notification_reminder_child_text">Remember to record the food intake for yourself and your child today.</string>
...
