...
                android:background="@color/button_background"
                android:drawableTint="@color/white"
                android:drawableTop="@drawable/ic_btn_home"
                android:text="@string/menu_home"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnBack"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnInstruction"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
...
